[package]
name = "tio4905"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.5"
clap = { version = "3.1.6", features = ["derive"] }
itertools = "0.10.3"
csv = "1.1"
lexical-sort = "0.3.1"
rayon = "1.5.1"
indicatif = "0.16.2"