[package]
name = "tio4905"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
csv = "1.1"
indicatif = "0.16.2"
itertools = "0.10.3"
lexical-sort = "0.3.1"
rand = "0.8.5"
rayon = "1.5.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"